[Documentation] Added main benefeits of having passwords stored in password keeper

--- a/documents/documentation/memtype.html
+++ b/documents/documentation/memtype.html
@@ -461,17 +461,31 @@ MemType hardware, firmware, software tools and usage for any user level.</p>
 <div class="sectionbody">
 <div class="paragraph">
 <p>Technically speaking the MemType is an open source <code>hardware password keeper</code>.
-This means it is basically a device focused in securely <code>storing passwords</code> to prevent anyone
-but the owner to access them. The <code>open source</code> part means that we share all the
+This means it is basically a device focused in securely <code>storing passwords</code>.
+The <code>open source</code> part means that we share all the
 software source files, hardware design files and documentation under the
 <a href="#license">[license]</a> conditions.</p>
+</div>
+<div class="paragraph">
+<p>Having the passwords stored in a password keeper has several advantages, but the
+two main are:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>No need to repeat same pass in several places.</p>
+</li>
+<li>
+<p>More secure passwords can be used, no need to remember them.</p>
+</li>
+</ul>
 </div>
 </div>
 </div>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-11-22 23:12:37 CET
+Last updated 2016-11-22 23:23:04 CET
 </div>
 </div>
 </body>
