Windows Installers for PyQt4 were no more availables on the riverbank site, so we edited the link to the sourforge.net site. Also added a pdf version of the Documentation.

--- a/documents/documentation/memtype.html
+++ b/documents/documentation/memtype.html
@@ -857,7 +857,7 @@ Using a linux virtual machine can be a workaround for the moment.
 <div class="olist loweralpha">
 <ol class="loweralpha" type="a">
 <li>
-<p><a href="https://riverbankcomputing.com/software/pyqt/download" class="bare">https://riverbankcomputing.com/software/pyqt/download</a></p>
+<p><a href="https://sourceforge.net/projects/pyqt/files/PyQt4/PyQt-4.11.4/" class="bare">https://sourceforge.net/projects/pyqt/files/PyQt4/PyQt-4.11.4/</a></p>
 </li>
 </ol>
 </div>
@@ -893,7 +893,7 @@ change them in the next step).</p>
 </li>
 <li>
 <p>Execute install-filter-win (find it inside extracted folder, under /bin/x86 or
-other if your windows is 64bits).</p>
+<code>other if your windows is 64bits</code>).</p>
 <div class="olist loweralpha">
 <ol class="loweralpha" type="a">
 <li>
@@ -1380,7 +1380,7 @@ credentials.</p>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2016-11-30 20:17:22 CET
+Last updated 2017-02-27 19:38:38 CET
 </div>
 </div>
 </body>
